Source/WebInspectorUI/UserInterface/Controllers/TimelineManager.js
@@ -29,7 +29,7 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
     {
         super();
 
-        WebInspector.Frame.addEventListener(WebInspector.Frame.Event.ProvisionalLoadStarted, this._startAutoCapturing, this);
+        WebInspector.Frame.addEventListener(WebInspector.Frame.Event.ProvisionalLoadStarted, this._provisionalLoadStarted, this);
         WebInspector.Frame.addEventListener(WebInspector.Frame.Event.MainResourceDidChange, this._mainResourceDidChange, this);
         WebInspector.Frame.addEventListener(WebInspector.Frame.Event.ResourceWasAdded, this._resourceWasAdded, this);
 
@@ -37,12 +37,15 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
         WebInspector.memoryManager.addEventListener(WebInspector.MemoryManager.Event.MemoryPressure, this._memoryPressure, this);
 
         this._enabledTimelineTypesSetting = new WebInspector.Setting("enabled-instrument-types", WebInspector.TimelineManager.defaultTimelineTypes());
+        this._updateAutoCaptureInstruments();
 
         this._persistentNetworkTimeline = new WebInspector.NetworkTimeline;
 
         this._isCapturing = false;
         this._isCapturingPageReload = false;
-        this._autoCapturingMainResource = null;
+        this._autoCaptureOnPageLoad = false;
+        this._mainResourceForAutoCapturing = null;
+        this._shouldSetAutoCapturingMainResource = false;
         this._boundStopCapturing = this.stopCapturing.bind(this);
 
         this._webTimelineScriptRecordsExpectingScriptProfilerEvents = null;
@@ -128,6 +131,9 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
     set autoCaptureOnPageLoad(autoCapture)
     {
         this._autoCaptureOnPageLoad = autoCapture;
+
+        if (window.TimelineAgent && TimelineAgent.setAutoCaptureEnabled)
+            TimelineAgent.setAutoCaptureEnabled(autoCapture);
     }
 
     get enabledTimelineTypes()
@@ -139,6 +145,8 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
     set enabledTimelineTypes(x)
     {
         this._enabledTimelineTypesSetting.value = x || [];
+
+        this._updateAutoCaptureInstruments();
     }
 
     isCapturing()
@@ -204,6 +212,8 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
 
     capturingStarted(startTime)
     {
+        // Called from WebInspector.TimelineObserver.
+
         if (this._isCapturing)
             return;
 
@@ -219,6 +229,8 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
 
     capturingStopped(endTime)
     {
+        // Called from WebInspector.TimelineObserver.
+
         if (!this._isCapturing)
             return;
 
@@ -234,9 +246,22 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
 
         this._isCapturing = false;
         this._isCapturingPageReload = false;
-        this._autoCapturingMainResource = null;
+        this._shouldSetAutoCapturingMainResource = false;
+        this._mainResourceForAutoCapturing = null;
 
         this.dispatchEventToListeners(WebInspector.TimelineManager.Event.CapturingStopped, {endTime});
+    }
+
+    autoCaptureStarted(startTime)
+    {
+        // Called from WebInspector.TimelineObserver.
+
+        if (this._isCapturing)
+            this.stopCapturing();
+
+        this.startCapturing(true);
+
+        this._shouldSetAutoCapturingMainResource = true;
     }
 
     eventRecorded(recordPayload)
@@ -591,10 +616,10 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
         // Now that we have navigated, we should reset the legacy base timestamp and the
         // will send request timestamp for the new main resource. This way, all new timeline
         // records will be computed relative to the new navigation.
-        if (this._autoCapturingMainResource && WebInspector.TimelineRecording.isLegacy) {
-            console.assert(this._autoCapturingMainResource.originalRequestWillBeSentTimestamp);
-            this._activeRecording.setLegacyBaseTimestamp(this._autoCapturingMainResource.originalRequestWillBeSentTimestamp);
-            this._autoCapturingMainResource._requestSentTimestamp = 0;
+        if (this._mainResourceForAutoCapturing && WebInspector.TimelineRecording.isLegacy) {
+            console.assert(this._mainResourceForAutoCapturing.originalRequestWillBeSentTimestamp);
+            this._activeRecording.setLegacyBaseTimestamp(this._mainResourceForAutoCapturing.originalRequestWillBeSentTimestamp);
+            this._mainResourceForAutoCapturing._requestSentTimestamp = 0;
         }
 
         this.dispatchEventToListeners(WebInspector.TimelineManager.Event.RecordingLoaded, {oldRecording});
@@ -617,25 +642,58 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
             this._resetAutoRecordingDeadTimeTimeout();
     }
 
-    _startAutoCapturing(event)
+    _attemptAutoCapturingForFrame(frame)
     {
         if (!this._autoCaptureOnPageLoad)
             return false;
 
-        if (!event.target.isMainFrame() || (this._isCapturing && !this._autoCapturingMainResource))
+        if (!frame.isMainFrame())
             return false;
 
-        var mainResource = event.target.provisionalMainResource || event.target.mainResource;
-        if (mainResource === this._autoCapturingMainResource)
+        // COMPATIBILITY (iOS 9): Timeline.setAutoCaptureEnabled did not exist.
+        // Perform auto capture in the frontend.
+        if (!TimelineAgent.setAutoCaptureEnabled)
+            return this._legacyAttemptStartAutoCapturingForFrame(frame);
+
+        if (!this._shouldSetAutoCapturingMainResource)
             return false;
 
-        var oldMainResource = event.target.mainResource || null;
+        console.assert(this._isCapturing, "We saw autoCaptureStarted so we should already be capturing");
+
+        let mainResource = frame.provisionalMainResource || frame.mainResource;
+        if (mainResource === this._mainResourceForAutoCapturing)
+            return false;
+
+        let oldMainResource = frame.mainResource || null;
+        this._isCapturingPageReload = oldMainResource !== null && oldMainResource.url === mainResource.url;
+
+        this._mainResourceForAutoCapturing = mainResource;
+
+        this._addRecord(new WebInspector.ResourceTimelineRecord(mainResource));
+
+        this._resetAutoRecordingMaxTimeTimeout();
+
+        this._shouldSetAutoCapturingMainResource = false;
+
+        return true;
+    }
+
+    _legacyAttemptStartAutoCapturingForFrame(frame)
+    {
+        if (this._isCapturing && !this._mainResourceForAutoCapturing)
+            return false;
+
+        let mainResource = frame.provisionalMainResource || frame.mainResource;
+        if (mainResource === this._mainResourceForAutoCapturing)
+            return false;
+
+        let oldMainResource = frame.mainResource || null;
         this._isCapturingPageReload = oldMainResource !== null && oldMainResource.url === mainResource.url;
 
         if (this._isCapturing)
             this.stopCapturing();
 
-        this._autoCapturingMainResource = mainResource;
+        this._mainResourceForAutoCapturing = mainResource;
 
         this._loadNewRecording();
 
@@ -643,9 +701,7 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
 
         this._addRecord(new WebInspector.ResourceTimelineRecord(mainResource));
 
-        if (this._stopCapturingTimeout)
-            clearTimeout(this._stopCapturingTimeout);
-        this._stopCapturingTimeout = setTimeout(this._boundStopCapturing, WebInspector.TimelineManager.MaximumAutoRecordDuration);
+        this._resetAutoRecordingMaxTimeTimeout();
 
         return true;
     }
@@ -653,7 +709,7 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
     _stopAutoRecordingSoon()
     {
         // Only auto stop when auto capturing.
-        if (!this._isCapturing || !this._autoCapturingMainResource)
+        if (!this._isCapturing || !this._mainResourceForAutoCapturing)
             return;
 
         if (this._stopCapturingTimeout)
@@ -661,10 +717,17 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
         this._stopCapturingTimeout = setTimeout(this._boundStopCapturing, WebInspector.TimelineManager.MaximumAutoRecordDurationAfterLoadEvent);
     }
 
+    _resetAutoRecordingMaxTimeTimeout()
+    {
+        if (this._stopCapturingTimeout)
+            clearTimeout(this._stopCapturingTimeout);
+        this._stopCapturingTimeout = setTimeout(this._boundStopCapturing, WebInspector.TimelineManager.MaximumAutoRecordDuration);
+    }
+
     _resetAutoRecordingDeadTimeTimeout()
     {
         // Only monitor dead time when auto capturing.
-        if (!this._isCapturing || !this._autoCapturingMainResource)
+        if (!this._isCapturing || !this._mainResourceForAutoCapturing)
             return;
 
         if (this._deadTimeTimeout)
@@ -672,13 +735,19 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
         this._deadTimeTimeout = setTimeout(this._boundStopCapturing, WebInspector.TimelineManager.DeadTimeRequiredToStopAutoRecordingEarly);
     }
 
+    _provisionalLoadStarted(event)
+    {
+        this._attemptAutoCapturingForFrame(event.target);
+    }
+
     _mainResourceDidChange(event)
     {
-        if (event.target.isMainFrame())
+        let frame = event.target;
+        if (frame.isMainFrame())
             this._persistentNetworkTimeline.reset();
 
-        var mainResource = event.target.mainResource;
-        var record = new WebInspector.ResourceTimelineRecord(mainResource);
+        let mainResource = frame.mainResource;
+        let record = new WebInspector.ResourceTimelineRecord(mainResource);
         if (!isNaN(record.startTime))
             this._persistentNetworkTimeline.addRecord(record);
 
@@ -687,13 +756,13 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
         if (!WebInspector.frameResourceManager.mainFrame)
             return;
 
-        if (this._startAutoCapturing(event))
+        if (this._attemptAutoCapturingForFrame(frame))
             return;
 
         if (!this._isCapturing)
             return;
 
-        if (mainResource === this._autoCapturingMainResource)
+        if (mainResource === this._mainResourceForAutoCapturing)
             return;
 
         this._addRecord(record);
@@ -890,6 +959,39 @@ WebInspector.TimelineManager = class TimelineManager extends WebInspector.Object
         // Skipping the remaining ScriptProfiler events to match the current UI for handling Timeline records.
         // However, the remaining ScriptProfiler records are valid and could be shown.
         // FIXME: <https://webkit.org/b/152904> Web Inspector: Timeline UI should keep up with processing all incoming records
+    }
+
+    _updateAutoCaptureInstruments()
+    {
+        if (!window.TimelineAgent)
+            return;
+
+        if (!TimelineAgent.setAutoCaptureInstruments)
+            return;
+
+        let instrumentSet = new Set;
+        let enabledTimelineTypes = this._enabledTimelineTypesSetting.value;
+
+        for (let timelineType of enabledTimelineTypes) {
+            switch (timelineType) {
+            case WebInspector.TimelineRecord.Type.Script:
+                instrumentSet.add(TimelineAgent.Instrument.ScriptProfiler);
+                break;
+            case WebInspector.TimelineRecord.Type.HeapAllocations:
+                instrumentSet.add(TimelineAgent.Instrument.Heap);
+                break;
+            case WebInspector.TimelineRecord.Type.Network:
+            case WebInspector.TimelineRecord.Type.RenderingFrame:
+            case WebInspector.TimelineRecord.Type.Layout:
+                instrumentSet.add(TimelineAgent.Instrument.Timeline);
+                break;
+            case WebInspector.TimelineRecord.Type.Memory:
+                instrumentSet.add(TimelineAgent.Instrument.Memory);
+                break;
+            }
+        }
+
+        TimelineAgent.setAutoCaptureInstruments([...instrumentSet]);
     }
 };
 
